# counter

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  Pipfile  README.md  cl_test_context.py  cl_test_runner.py  docker_node_port.patch  rust-toolchain
.cargo/: config
.github/workflows/: ci-casper-rust-contract.yml  nightly-scheduled-test.yml
contract/: Cargo.toml
contract-v1/: Cargo.toml
contract-v1/src/: main.rs
contract-v2/: Cargo.toml
contract-v2/src/: main.rs
contract-v3/: Cargo.toml
contract-v3/src/: main.rs
contract/src/: main.rs
contracts/: Cargo.toml
contracts/counter-call/: Cargo.toml
contracts/counter-call/src/: lib.rs  main.rs
contracts/counter-define/: Cargo.toml
contracts/counter-define/src/: lib.rs  main.rs
contracts/src/: counter_call.rs  counter_v1_install.rs  counter_v2_reset.rs
counter-as/: README.md
counter-as/counter-call/: index.js  package-lock.json  package.json
counter-as/counter-call/assembly/: index.ts
counter-as/counter-define/: index.js  package-lock.json  package.json
counter-as/counter-define/assembly/: index.ts
counter-call/: Cargo.toml
counter-call/src/: main.rs
counter-rs/contracts/counter-define/src/: main.rs
counter-rs/tests/src/: integration_tests.rs
counter-rs/tests/wasm/: counter-call.wasm  counter-define.wasm
keys/: private-key  public-key  public-key-hex
scripts/: check-counter.sh  deploy-smart-contract.sh  increment-counter.sh
tests/: Cargo.toml  test_counter.py
tests/src/: OLD_integration_tests.rs  integration_tests.rs
