[package]
name = "counter-v3"
version = "2.0.0"
edition = "2021"

[dependencies]
casper-contract = "5.0.0"
casper-types = "6.0.0"
#base64ct dependency lock should be removed once we use a rust-toolchain compliant with edition2024
base64ct = "=1.7.2"

[[bin]]
name = "counter-v3"
path = "src/main.rs"
bench = false
doctest = false
test = false
