[package]
name = "counter-define"
version = "1.0.0"
authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "counter-define"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release] #reduces Wasm size