[package]
name = "contracts"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.2.0"
casper-types = "1.2.0"

[[bin]]
name = "counter-call"
path = "src/counter_call.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "counter-v1-install"
path = "src/counter_v1_install.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "counter-v2-reset"
path = "src/counter_v2_reset.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
