[package]
name = "counter-call"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="0.7.6" }
types = { package = "casper-types", version="0.7.6" }

[[bin]]
name = "counter-call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
