[package]
name = "counter-call"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.2.0"
casper-types = "1.2.0"

[[bin]]
name = "counter-call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]