[package]
name = "counter-define"
version = "0.1.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"

[[bin]]
name = "counter-define"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
