[package]
name = "counter-define"
version = "1.0.0"
authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.5"

[[bin]]
name = "counter-define"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true
